# rust-trees

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml  requirements.txt  scikit-study.md  setup.py  sklearn_dt.ipynb
.github/workflows/: rust.yml
benches/: benchmarks.rs
datasets/: breast_cancer_test.csv  breast_cancer_train.csv  diabetes_test.csv  diabetes_train.csv  housing_test.csv  housing_train.csv  one_feature_test.csv  titanic_test.csv  titanic_train.csv  toy.csv  toy_test.csv  toy_test_predict.csv
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
python/notebooks/: econml_vs_rustrees.ipynb  sklearn_vs_rustrees.ipynb
python/rustrees/: decision_tree.py  random_forest.py  tree.py  utils.py
python/rustrees/notebooks/: econml_vs_rustrees.ipynb
src/: arrow_internal.rs  dataset.rs  lib.rs  main.rs  split_criteria.rs  tests.rs  tree_node.rs  trees.rs  utils.rs  vec_utils.rs
