[package]
name = "rustrees"
version = "0.1.0"
edition = "2021"
authors = [
    "Guilherme Lázari <guilhermelcs@gmail.com>",
    "Pedro Tabacof <tabacof@gmail.com>",
]

[lib]
name = "rustrees"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
pyo3 = { version = "0.18.1", features = ["extension-module"] }
permutation = "0.4.1"
rayon = "1.7.0"
arrow = { version = "37.0.0", features = ["prettyprint", "pyarrow"] }
