[project]
name = "rustrees"
dependencies = [
    "numpy>=1.0",
    "pandas>=2.0",
    "scikit-learn>=1.0",
    "pyarrow>=12.0",
]

[tool.maturin]
python-source = "python"
module-name = "rustrees.rustrees"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
